--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ gunicorn==19.9.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 Werkzeug==0.15.5
-numpy>=1.9.2
-scipy>=0.15.1
-scikit-learn>=0.18
-pandas>=0.19
+beautifulsoup4==4.9.1
+click==7.1.1
+requests==2.23.0
+webencodings==0.5.1
